[package]
name = "signaling-server"
version = "0.1.0"
authors = ["KO"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
clap = "2"
rand = "0.7"
serde = "1"
serde_json = "1"
json = "0.12.4"